--- a/Lab.htm
+++ b/Lab.htm
@@ -9,6 +9,7 @@
 	<script src="js/Sprite.js"></script>
 </head>
 <body>
+	<canvas style="border: 1px dashed #ffffff;" width="640" height="480"></canvas>
 
 
 
