--- a/Lab.htm
+++ b/Lab.htm
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/Main.css" />
 	<script src="js/Main.js"></script>
 	<script src="js/Scene.js"></script>
-	<script src="js/Sprite.js"></script>
+	<script src="js/Texture.js"></script>
 </head>
 <body>
 	<canvas style="border: 1px dashed #ffffff;" width="640" height="480"></canvas>
