--- a/Lab.htm
+++ b/Lab.htm
@@ -9,7 +9,7 @@
 	<script src="js/Texture.js"></script>
 </head>
 <body>
-	<canvas style="border: 1px dashed #ffffff;" width="640" height="480"></canvas>
+	<canvas id="canvas" style="border: 1px dashed #ffffff;" width="640" height="480"></canvas>
 
 
 
