Forgot to include Ent

--- a/Lab.htm
+++ b/Lab.htm
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/Main.css" />
 	<script src="js/Main.js"></script>
 	<script src="js/Scene.js"></script>
+	<script src="js/Ent.js"></script>
 	<script src="js/Texture.js"></script>
 </head>
 <body>
