Common.js & mapping functions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Lab</title>
 	<link rel="icon" href="img/Lab.ico" />
 	<link rel="stylesheet" href="css/Main.css" />
+	<script src="js/Common.js"></script>
 	<script src="js/Main.js"></script>
 	<script src="js/Scene.js"></script>
 	<script src="js/Entity.js"></script>
